--- a/src/index.html
+++ b/src/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Yet Another Movie Application</title>
+    <title>Welcome to Plan Your Holiday</title>
 </head>
 
 <body>
