Working on the Router
Trying to comprehend and rework the router

--- a/src/index.html
+++ b/src/index.html
@@ -19,9 +19,19 @@
    </div>
   </nav>
 
-    <app-content>
+  <!-- <div class="container">
+      <div ui-view>
+        The content of the App is loaded here
+      </div>
+  </div> -->
 
-    </app-content>
+  <app-content>
+
+  </app-content>
+
+  <div class="text-center">
+    <p>A website designed and constructed by Team 59 of the SEBA Masters Course 2017</p>
+  </div>
 
 </body>
 </html>
