--- a/src/index.html
+++ b/src/index.html
@@ -8,20 +8,6 @@
 </head>
 
 <body>
-
-  <nav class="navbar navbar-default">
-    <div class="container-fluid">
-     <ul class="nav navbar-nav navbar-right">
-        <li><a href="#">Partners <span class="bar">|</span></a></li>
-        <li><a href="#">About <span class="bar">|</span></a></li>
-        <li><a href="#">Login<span class="bar"></span></a></li>
-      </ul>
-   </div>
-  </nav>
-
-    <app-content>
-
-    </app-content>
-
+    <app-content></app-content>
 </body>
 </html>
